Fixed navbar alignment issue at 1060px breakpoint

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -306,7 +306,13 @@ nav ul li {
 
 	nav ul {
 		text-align: center;
-		margin-top: 30px;
+		margin-top: 30px !important;
+		margin: 0 auto;
+	}
+
+	nav ul li {
+		margin-right: 0 !important;
+		text-align: center;
 	}
 }
 
